Added more research suggestions to graphics course. Marked an item as done

--- a/todo.html
+++ b/todo.html
@@ -48,7 +48,7 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Try contacting Valmuen and NITO if they would like to fund a graphics course</li>
 <li><input type="checkbox" disabled="" />
 Add when chores need to be done into calendar</li>
