--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -231,6 +231,8 @@
               <li>Read Chapter 8 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut08%20Glossary.html">link</a></li>
               <li>Modify the Interpolation tutorial to allow multiple animations to be active simultaneously. The Orientation class is already close to being able to allow this. Instead of storing a single Orientation::Animation object, it should store a std::deque of them. When the external code adds a new one, it gets pushed onto the end of the deque. During update, the front-most entries can end and be popped off, recording its destination index as the new current one in the Orientation class. To get the orientation, just call each animation's orientation function, feeding the previous result into the next one.</li>
               <li>Change the Interpolation tutorial to allow one to specify whether the long path or short path between two orientations should be taken. This can work for both linear and spherical interpolation.</li>
+              <li>This discussion has focused on the utility of quaternions in orienting objects, and it has deftly avoided answering the question of exactly what a quaternion is. After all, saying that a quaternion is a four-dimensional complex number does not explain why they are useful in graphics. They are a quite fascinating subject for those who like oddball math concepts.</li>
+              <li>This discussion has also glossed over a few uses of quaternions in graphics, such as how to directly rotate a position or direction by a quaternion. Such information is readily available online.</li>
             </ul>
 
           <h4>Workshop Friday 8. March 2024</h4>
@@ -251,6 +253,7 @@
               <li>Change the shaders in the ambient lighting tutorial to use the lighting intensity correction mentioned above. Divide the diffuse color by a value, then pass larger lighting intensities to the shader. Notice how this changes the quality of the lighting.</li>
               <li>Read Chapter 9 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut09%20Glossary.html">link</a></li>
               <li>Consider Phong shading <a href="https://web.archive.org/web/20180816064924/http://www.sunandblackcat.com/tipFullView.php?l=eng&topicid=30">arhive.org</a></li>
+              <li>Lambertian diffuse reflectance is a rather good model for diffuse reflectance for many surfaces. Particularly rough surfaces however do not behave in a Lambertian manor. If you are interested in modelling such surfaces, investigate the Oren-Nayar reflectance model.</li>
             </ul>
 
           <h4>Workshop Friday 15. March 2024</h4>
@@ -288,6 +291,12 @@
               <li>Read Chapter 11 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut11%20In%20Review.html">link</a></li>
               <li>Read Chapter 11 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut11%20Glossary.html">link</a></li>
               <li>Change the shaders to use the diffuse color as the specular color. You may need to drop the specular color somewhat to keep from over-brightening the scene. How this all looks will be particularly evident with the colored cylinder.</li>
+              <li>As you might guess, this is far from the end on specular reflections and specular highlights. Accurately modelling specular reflection is very difficult; doing so while maintaining high performance is even moreso.</li>
+              <li>If you are interested in more accurate models of specular highlights, there is the Beckmann distribution. This is a particular statistical distribution of microfacets that is more physically based than a Gaussian distribution. It may or may not be a bit more computationally expensive than Gaussian; Beckmann lacks the inverse cosine, but has more other math to it. The two do have a roughness factor that has the same range, (0, 1], and the roughness has the same general meaning in both distributions.</li>
+              <li>If you want to go even farther, investigate the Cook-Torrance model of specular reflection. It incorporates several terms. It uses a statistical distribution to determine the number of microfacets oriented in a direction. This distribution can be Gaussian, Beckmann, or some other distribution. It modifies this result based on a geometric component that models microfacet self-shadowing and the possibility for multiple interreflections among a microfaceted surface. And it adds a term to compensate for the Fresnel effect: an effect where specular reflection from a surface is more intense when viewed edge-on than directly top-down.</li>
+             <li>HDR is a pretty large field. This tutorial covered perhaps the simplest form of tone mapping, but there are many equations one can use. There are tone mapping functions that map the full [0, ∞) range to [0, 1]. This would not be useful for a scene that needs a dynamic aperture size, but if the aperture is static, it does allow the use of a large range of lighting values.</li>
+             <li>When doing tone mapping with some form of variable aperture setting, computing the proper maximum intensity value can be difficult. Having a hard-coded value, even one that varies algorithmically, works well enough for some scenes. But for scenes where the user can control where the camera faces, it can be inappropriate. In many modern games, they actually read portions of the rendered image back to the CPU and do some computational analysis to determine what the maximum intensity should be for the next frame. This is delayed, of course, but it allows for an aperture that varies based on what the player is currently looking at, rather than hard-coded values.</li>
+             <li>Just remember: pick your HDR and tone mapping algorithms before you start putting the scene together. If you try to change them mid-stream, you will have to redo a lot of work.</li>
             </ul>
 
           <h4>Workshop Friday 29. March 2024</h4>
