--- a/todo.html
+++ b/todo.html
@@ -48,45 +48,33 @@
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" checked="" />
-Try contacting Valmuen and NITO if they would like to fund a graphics course</li>
 <li><input type="checkbox" disabled="" />
-Add when chores need to be done into calendar</li>
+Make an app out of dallebot</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />
+Try contacting Valmuen and NITO if they would like to fund a graphics course</li>
+<li><input type="checkbox" disabled="" />
+Add when chores need to be done into calendar</li>
+<li><input type="checkbox" disabled="" />
+Read Lær Sjakk and complete third chapter (and exercises) -&gt; 23.december.2023</li>
 <li><input type="checkbox" disabled="" />
 Read Lær Sjakk and complete fourth chapter (and exercises) -&gt; 23.december.2023</li>
 <li><input type="checkbox" disabled="" />
 Read Lær Sjakk and complete fifth chapter (and exercises) -&gt; 23.december.2023</li>
-<li><input type="checkbox" disabled="" checked="" />
-Code for at least 15 minutes</li>
-<li><input type="checkbox" disabled="" checked="" />
-Code for at least 15 minutes</li>
 <li><input type="checkbox" disabled="" />
 Draw 2 hours</li>
 <li><input type="checkbox" disabled="" />
 Complete 250 box challenge</li>
 <li><input type="checkbox" disabled="" />
-Read Lær Sjakk and complete third chapter (and exercises) -&gt; 23.december.2023</li>
-<li><input type="checkbox" disabled="" />
 Hand in second drawabox assignment -&gt; 18. january 2023</li>
-<li><input type="checkbox" disabled="" checked="" />
-Take washing out of washing machine</li>
-<li><input type="checkbox" disabled="" checked="" />
-Hang clothes up to dry</li>
 <li><input type="checkbox" disabled="" />
 Take clothes up to room</li>
-<li><input type="checkbox" disabled="" checked="" />
-Wash more clothes</li>
-<li><input type="checkbox" disabled="" checked="" />
-Dry second batch of clothes</li>
 <li><input type="checkbox" disabled="" />
 Take second batch up to room</li>
-<li><input type="checkbox" disabled="" checked="" />
-Hand in first drawabox assignment -&gt; 18. desember 2023</li>
 <li><input type="checkbox" disabled="" />
 Do jeh exercises in programming</li>
 <li><input type="checkbox" disabled="" />
