Done another chapter of chess book

--- a/todo.html
+++ b/todo.html
@@ -59,7 +59,7 @@ Make an app out of dallebot</li>
 Try contacting Valmuen and NITO if they would like to fund a graphics course</li>
 <li><input type="checkbox" disabled="" />
 Add when chores need to be done into calendar</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Read Lær Sjakk and complete third chapter (and exercises) -&gt; 23.december.2023</li>
 <li><input type="checkbox" disabled="" />
 Read Lær Sjakk and complete fourth chapter (and exercises) -&gt; 23.december.2023</li>
