--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -56,7 +56,7 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will read the introduction and start reading the introduction and first chapter of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will read the introduction and first chapter of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
               <li>Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
