Changed name from workshop to col.

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -41,7 +41,7 @@
 
           <h2>Modern Graphics Programming</h2>
 
-            <p>This workshop is about working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
+            <p>This page is for a study group working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
 
@@ -51,7 +51,7 @@
 
     <br />
 
-          <h3>Weekly Workshop Friday 12. January 2024</h3>
+          <h3>Weekly Colleqium Friday 12. January 2024</h3>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -89,7 +89,7 @@
               <li>Consider writing your own framework and hello triangle using glfw, SDL or winAPI. <a href="https://paroj.github.io/gltut/Getting%20Started%20with%20OpenGL.html">Appendix D</a> might help. You could use <a href=https://glad.dav1d.de>Glad</a> or similar to load the newest OpenGL API for your system.</li>
             </ul>
 
-          <h4>Workshop Friday 19. January 2024</h4>
+          <h4>Colloquium Friday 19. January 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -108,7 +108,7 @@
               <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
             </ul>
 
-          <h4>Workshop Friday 26. January 2024</h4>
+          <h4>Colloquium Friday 26. January 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -130,7 +130,7 @@
               <li>Try using uniforms to change various properties of the graphics 
             </ul>
 
-          <h4>Workshop Friday 2. February 2024</h4>
+          <h4>Colloquium Friday 2. February 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -151,7 +151,7 @@
               <li>Try to make a program which lets you toggle between perspective and orthogonal projection</li>
             </ul>
 
-          <h4>Workshop Friday 9. February 2024</h4>
+          <h4>Colloquium Friday 9. February 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -170,7 +170,7 @@
               <li>Consider including <a href="https://github.com/g-truc/glm">glm</a> to store and manipulate vectors and matrices</li>
             </ul>
 
-          <h4>Workshop Friday 16. February 2024</h4>
+          <h4>Colloquium Friday 16. February 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -193,7 +193,7 @@
               <li>Make the entire solar system out of spheres in OpenGL, where the planets spin at correct speeds and are at correct distances and orbits to the sun</li>
             </ul>
 
-          <h4>Workshop Friday 23. February 2024</h4>
+          <h4>Colloquium Friday 23. February 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -215,7 +215,7 @@
               <li>Write code which renders a cylinder</li>
             </ul>
 
-          <h4>Workshop Friday 1. March 2024</h4>
+          <h4>Colloquium Friday 1. March 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -235,7 +235,7 @@
               <li>This discussion has also glossed over a few uses of quaternions in graphics, such as how to directly rotate a position or direction by a quaternion. Such information is readily available online.</li>
             </ul>
 
-          <h4>Workshop Friday 8. March 2024</h4>
+          <h4>Colloquium Friday 8. March 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -256,7 +256,7 @@
               <li>Lambertian diffuse reflectance is a rather good model for diffuse reflectance for many surfaces. Particularly rough surfaces however do not behave in a Lambertian manor. If you are interested in modelling such surfaces, investigate the Oren-Nayar reflectance model.</li>
             </ul>
 
-          <h4>Workshop Friday 15. March 2024</h4>
+          <h4>Colloquium Friday 15. March 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -275,7 +275,7 @@
               <li>Implement the alternative attenuation described at the end of the section on attenuation.</li>
             </ul>
 
-          <h4>Workshop Friday 22. March 2024</h4>
+          <h4>Colloquium Friday 22. March 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -299,7 +299,7 @@
              <li>Just remember: pick your HDR and tone mapping algorithms before you start putting the scene together. If you try to change them mid-stream, you will have to redo a lot of work.</li>
             </ul>
 
-          <h4>Workshop Friday 29. March 2024</h4>
+          <h4>Colloquium Friday 29. March 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -316,7 +316,7 @@
               <li>Play with the ambient lighting intensity in the gamma-correct scene, particularly in the daytime. A little ambient, even with a maximum intensity as high as 10, really goes a long way to bringing up the level of brightness in a scene.</li>
             </ul>
 
-          <h4>Workshop Friday 5. April 2024</h4>
+          <h4>Colloquium Friday 5. April 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -334,7 +334,7 @@
               <li>Change the geometry impostor tutorial to take another vertex input: the material to use. The vertex shader should pass it along to the geometry shader, and the geometry shader should hand it to the fragment shader. You can still use gl_PrimitiveID as the way to tell the fragment shader. Regardless of how you send it, you will need to convert the value to an integer at some point. That can be done with this constructor-like syntax: int(value_to_convert).</li>
             </ul>
 
-          <h4>Workshop Friday 12. April 2024</h4>
+          <h4>Colloquium Friday 12. April 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -352,7 +352,7 @@
               <li>Animate the texture coordinates in the texture mapping tutorial. Do this by sending an offset to the fragment shader which is applied to the texture coordinates. You can generate the offset based on the Framework::Timer g_lightTimer. Make sure to use the mod function on the texture coordinates with a value of 1.0, so that the texture coordinate will always stay on the range [0, 1].</li>
             </ul>
 
-          <h4>Workshop Friday 19. April 2024</h4>
+          <h4>Colloquium Friday 19. April 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -373,7 +373,7 @@
               <li>Go back to Basic Texture in the previous tutorial and modify the sampler to use linear mag and min filtering on the 1D texture. See if the linear filtering makes some of the lower resolution versions of the table more palatable. If you were to try this with the 2D lookup texture in Material Texture tutorial, it would cause filtering in both the S and T coordinates. This would mean that it would filter across the shininess of the table as well. Try this and see how this affects the results. Also try using linear filtering on the shininess texture.</li>
             </ul>
 
-          <h4>Workshop Friday 26. April 2024</h4>
+          <h4>Colloquium Friday 26. April 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -388,7 +388,7 @@
               <li>Read Chapter 16 Glossary <a href="https://paroj.github.io/gltut/Texturing/Tut16%20Glossary.html">link</a></li>
             </ul>
 
-          <h4>Workshop Friday 3. May 2024</h4>
+          <h4>Colloquium Friday 3. May 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
