Changing phrasing a little. Looking into making checkboxes

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -41,7 +41,7 @@
 
           <h2>Modern Graphics Programming</h2>
 
-            <p>This page is for a study group working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
+            <p>This page is for a study group working through the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
 
@@ -59,7 +59,7 @@
             <p>In today's session you will read the introduction and first chapter of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
-              <li>Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
               <li>Read Why Read This Book? <a href="https://paroj.github.io/gltut/About%20this%20Book.html#idp148">link</a></li>
               <li>Read What You Need <a href="https://paroj.github.io/gltut/About%20Need.html">link</a></li>
               <li>Read Organization of This Book <a href="https://paroj.github.io/gltut/About%20Organization.html">link</a></li>
