--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -47,6 +47,8 @@
 
           <h2>Modern Graphics Programming</h2>
 
+            <p><b>Note:</b> Nobody showed up to this, so if you are interested you will need to contact me personally.</p>
+
             <p>This page is for a study group working through the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
@@ -97,9 +99,6 @@
 
           <h4>Colloquium Friday 19. January 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will work through the second chapter of part I, <i>Basics (I): Chapter 2 - Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -115,9 +114,6 @@
             </ul>
 
           <h4>Colloquium Friday 26. January 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will work through the third chapter (the first chapter of part II <i>Positioning</i>) of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -138,9 +134,6 @@
 
           <h4>Colloquium Friday 2. February 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will work through chapter 4 of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -159,9 +152,6 @@
 
           <h4>Colloquium Friday 9. February 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will work through chapter 5 of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -177,9 +167,6 @@
             </ul>
 
           <h4>Colloquium Friday 16. February 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will work through <i>Chapter 6: Objects in Motion</i>, a chapter in part II, <i>Positioning</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -201,9 +188,6 @@
 
           <h4>Colloquium Friday 23. February 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will work through <i>Chapter 7: World in Motion</i>, the second to last chapter of part II, <i>Positioning</i>, in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -223,9 +207,6 @@
 
           <h4>Colloquium Friday 1. March 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will work through <i>Chapter 8: Getting Oriented</i>, the final chapter of part II, <i>Positioning</i>, in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -242,9 +223,6 @@
             </ul>
 
           <h4>Colloquium Friday 8. March 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will start on part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -264,9 +242,6 @@
 
           <h4>Colloquium Friday 15. March 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -282,9 +257,6 @@
             </ul>
 
           <h4>Colloquium Friday 22. March 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -307,9 +279,6 @@
 
           <h4>Colloquium Friday 29. March 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -323,9 +292,6 @@
             </ul>
 
           <h4>Colloquium Friday 5. April 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -342,9 +308,6 @@
 
           <h4>Colloquium Friday 12. April 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -359,9 +322,6 @@
             </ul>
 
           <h4>Colloquium Friday 19. April 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -381,9 +341,6 @@
 
           <h4>Colloquium Friday 26. April 2024</h4>
 
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
-
             <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
@@ -395,9 +352,6 @@
             </ul>
 
           <h4>Colloquium Friday 3. May 2024</h4>
-
-            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
-            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
