Added done tasks to graphics page

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -67,21 +67,21 @@
             <p>In today's session you will read the introduction and first chapter of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ol>
-              <li><input type="checkbox" id="horns" name="horns" />Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Why Read This Book? <a href="https://paroj.github.io/gltut/About%20this%20Book.html#idp148">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read What You Need <a href="https://paroj.github.io/gltut/About%20Need.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Organization of This Book <a href="https://paroj.github.io/gltut/About%20Organization.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Conventions used in This Book <a href="https://paroj.github.io/gltut/About%20Conventions.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Building the Tutorials <a href="https://paroj.github.io/gltut/Building%20the%20Tutorials.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Download CMake <a href="https://cmake.org">https://cmake.org</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Download the tutorial source code <a href="https://github.com/paroj/gltut/releases">github.com</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Compile all the tutorials (windows, linux or macos)</li>
-              <li><input type="checkbox" id="horns" name="horns" />Start reading Part I: The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Introduction <a href="https://paroj.github.io/gltut/Basics/Introduction.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Graphics and Rendering <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read What is OpenGL <a href="https://paroj.github.io/gltut/Basics/Intro%20What%20is%20OpenGL.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Chapter 1 Hello Triangle! <a href="https://paroj.github.io/gltut/Basics/Tutorial%2001.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Why Read This Book? <a href="https://paroj.github.io/gltut/About%20this%20Book.html#idp148">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read What You Need <a href="https://paroj.github.io/gltut/About%20Need.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Organization of This Book <a href="https://paroj.github.io/gltut/About%20Organization.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Conventions used in This Book <a href="https://paroj.github.io/gltut/About%20Conventions.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Building the Tutorials <a href="https://paroj.github.io/gltut/Building%20the%20Tutorials.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Download CMake <a href="https://cmake.org">https://cmake.org</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Download the tutorial source code <a href="https://github.com/paroj/gltut/releases">github.com</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Compile all the tutorials (windows, linux or macos)</li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Start reading Part I: The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Introduction <a href="https://paroj.github.io/gltut/Basics/Introduction.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Graphics and Rendering <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read What is OpenGL <a href="https://paroj.github.io/gltut/Basics/Intro%20What%20is%20OpenGL.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Chapter 1 Hello Triangle! <a href="https://paroj.github.io/gltut/Basics/Tutorial%2001.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" />Read Dissecting Display <a href="https://paroj.github.io/gltut/Basics/Tut01%20Dissecting%20Display.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" />Read Following the Data <a href="https://paroj.github.io/gltut/Basics/Tut01%20Following%20the%20Data.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" />Read Making Shaders <a href="https://paroj.github.io/gltut/Basics/Tut01%20Making%20Shaders.html">link</a></li>
