--- a/todo.html
+++ b/todo.html
@@ -47,14 +47,6 @@
 
 <h1 id="inbox">Inbox</h1>
 <h6 id="update-in-the-morning">Update in the morning</h6>
-<ul class="task-list">
-<li><label><input type="checkbox" />Wash clothes</label></li>
-<li><label><input type="checkbox" />Take clothes out of washing
-machine</label></li>
-<li><label><input type="checkbox" />Take dry clothes up to
-room</label></li>
-<li><label><input type="checkbox" />Play Outer Wilds</label></li>
-</ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls
 #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
@@ -63,6 +55,13 @@ id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-rem
 time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
+<li><label><input type="checkbox" checked="" />Wash clothes</label></li>
+<li><label><input type="checkbox" />Take clothes out of washing
+machine</label></li>
+<li><label><input type="checkbox" />Take dry clothes up to
+room</label></li>
+<li><label><input type="checkbox" checked="" />Play Outer
+Wilds</label></li>
 <li><label><input type="checkbox" />Buy a book shelf</label></li>
 <li><label><input type="checkbox" />Make tower defence in
 solid</label></li>
