Took clothes out

--- a/todo.html
+++ b/todo.html
@@ -56,8 +56,8 @@ time. Revisit. Flag what needs to be done today. The battle is to
 remember what to do!</h6>
 <ul class="task-list">
 <li><label><input type="checkbox" checked="" />Wash clothes</label></li>
-<li><label><input type="checkbox" />Take clothes out of washing
-machine</label></li>
+<li><label><input type="checkbox" checked="" />Take clothes out of
+washing machine</label></li>
 <li><label><input type="checkbox" />Take dry clothes up to
 room</label></li>
 <li><label><input type="checkbox" checked="" />Play Outer
