Added item to inbox

--- a/todo.html
+++ b/todo.html
@@ -52,6 +52,8 @@
 Review Getting Things Done in three months -&gt; january-2023</li>
 <li><input type="checkbox" disabled="" />
 Do global game jam in January</li>
+<li><input type="checkbox" disabled="" />
+Put glasses in sack</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
