Done all reading I planned

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -87,12 +87,12 @@
               <li><input type="checkbox" id="horns" name="horns" disabled checked />Read What is OpenGL <a href="https://paroj.github.io/gltut/Basics/Intro%20What%20is%20OpenGL.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" disabled checked />Read Chapter 1 Hello Triangle! <a href="https://paroj.github.io/gltut/Basics/Tutorial%2001.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Dissecting Display <a href="https://paroj.github.io/gltut/Basics/Tut01%20Dissecting%20Display.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Following the Data <a href="https://paroj.github.io/gltut/Basics/Tut01%20Following%20the%20Data.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Making Shaders <a href="https://paroj.github.io/gltut/Basics/Tut01%20Making%20Shaders.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Cleanup <a href="https://paroj.github.io/gltut/Basics/Tut01%20Cleanup.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Chapter 1 In Review <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
-              <li><input type="checkbox" id="horns" name="horns" />Read Chapter 1 Glossary <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Dissecting Display <a href="https://paroj.github.io/gltut/Basics/Tut01%20Dissecting%20Display.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Following the Data <a href="https://paroj.github.io/gltut/Basics/Tut01%20Following%20the%20Data.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Making Shaders <a href="https://paroj.github.io/gltut/Basics/Tut01%20Making%20Shaders.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Cleanup <a href="https://paroj.github.io/gltut/Basics/Tut01%20Cleanup.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Chapter 1 In Review <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" disabled checked/>Read Chapter 1 Glossary <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
               <li><input type="checkbox" id="horns" name="horns" disabled checked/>Change the color value set by the fragment shader to different values. Use values in the range [0, 1], and then see what happens when you go outside that range.</li>
               <li><input type="checkbox" id="horns" name="horns" disabled checked/>Change the positions of the vertex data. Keep position values in the [-1, 1] range, then see what happens when triangles go outside this range. Notice what happens when you change the Z value of the positions (note: nothing should happen while they're within the range). Keep the W values at 1.0 for now.</li>
               <li><input type="checkbox" id="horns" name="horns" disabled checked/>Change the clear color, using values in the range [0, 1]. Notice how this interacts with changes to the viewport above.</li>
