Added checkboxes to next week graphics programming

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -107,15 +107,15 @@
             <p>In today's session you will work through the second chapter of part I, <i>Basics (I): Chapter 2 - Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
-              <li>Read Chapter 2: <i>Playing with Colors</i> <a href="https://paroj.github.io/gltut/Basics/Tutorial%2002.html">link</a></li>
-              <li>Read Vertex Attributes <a href="https://paroj.github.io/gltut/Basics/Tut02%20Vertex%20Attributes.html">link</a></li>
-              <li>In Review <a href="https://paroj.github.io/gltut/Basics/Tut02%20In%20Review.html">link</a></li>
-              <li>Read Glossary <a href="https://paroj.github.io/gltut/Basics/Tut02%20Glossary.html">link</a></li>
-              <li>Try modifying tutorial 2, try to change the colours</li>
-              <li>Change the viewport in the FragPosition tutorial. Put the viewport in the top half of the display, and then put it in the bottom half. See how this affects the shading on the triangle.</li>
-              <li>Combine the FragPosition tutorial with the Vertex Color tutorial. Use interpolated color from the vertex shader and multiply that with the value computed based on the screen-space position of the fragment.</li>
-              <li>Start on Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
-              <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Read Chapter 2: <i>Playing with Colors</i> <a href="https://paroj.github.io/gltut/Basics/Tutorial%2002.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Read Vertex Attributes <a href="https://paroj.github.io/gltut/Basics/Tut02%20Vertex%20Attributes.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />In Review <a href="https://paroj.github.io/gltut/Basics/Tut02%20In%20Review.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Read Glossary <a href="https://paroj.github.io/gltut/Basics/Tut02%20Glossary.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Try modifying tutorial 2, try to change the colours</li>
+              <li><input type="checkbox" id="horns" name="horns" />Change the viewport in the FragPosition tutorial. Put the viewport in the top half of the display, and then put it in the bottom half. See how this affects the shading on the triangle.</li>
+              <li><input type="checkbox" id="horns" name="horns" />Combine the FragPosition tutorial with the Vertex Color tutorial. Use interpolated color from the vertex shader and multiply that with the value computed based on the screen-space position of the fragment.</li>
+              <li><input type="checkbox" id="horns" name="horns" />Start on Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
+              <li><input type="checkbox" id="horns" name="horns" />Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
             </ul>
 
           <h4>Colloquium Friday 26. January 2024</h4>
