Actually did something useful, checked off an item

--- a/todo.html
+++ b/todo.html
@@ -53,7 +53,7 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Take dry clothes up to room</li>
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Consider what to do with github pro</li>
 <li><input type="checkbox" disabled="" />
 Make solid work in browser</li>
