Made a link to wikipedia for the curiosity shop

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -170,7 +170,7 @@
 	    <p><b>Todo:</b></p>
             <ul>
               <li>Tegn brettet (The Old Curiosity shop i ett hjørne, et tivoli i midten, ny landsby i den andre.)</li>
-              <li>Bestem hvilke karakterer til å ta med</li>
+              <li>Bestem hvilke karakterer til å ta med. Se på persongalleriet her: <a href="https://en.wikipedia.org/wiki/The_Old_Curiosity_Shop#Characters">wikipedia.org</a></li>
               <li>Dag og natt system?</li>
             </ul>
           <p></p>
