--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -74,7 +74,7 @@
 
             <p>Drepe drage</p>
 
-            <img src="images/dragon">
+            <img src="images/dragon.png">
 
 	    <p><b>Hooks</b></p>
             <ul>
@@ -117,7 +117,7 @@
             <p>Hunger Games</p>
 	    <p><b>-></b>treasure i midten</p>
 
-            <img src="images/hunger">
+            <img src="images/hunger.png">
 
 	    <p><b>Hooks</b></p>
             <ul>
@@ -143,11 +143,11 @@
             </ul>
           <p></p>
 
-	  <h3>The Old Curiosity Shop <a href="https://www.gutenberg.org/files/700/700-h/700-h.htm">gutenberg.org</a></h3>
+	  <h3>The Old Curiosity Shop</h3>
 
-            <p>Charles Dickens 1840</p>
+            <p>Charles Dickens 1840 <a href="https://www.gutenberg.org/files/700/700-h/700-h.htm">gutenberg.org</a></p>
 
-            <img src="images/shop">
+            <img src="images/shop.jpg">
 
 	    <p><b>Hooks</b></p>
             <ul>
