Removed false literature

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -257,17 +257,10 @@
 
         <br />
 
-        <p><b>Literature:</b></p>
+        <p><b>Literatur:</b></p>
             <ul>
-              <li>Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></li>
+              <li>Players Making Decisions</li>
             </ul>
-        <p><b>Optional literature:</b></p>
-            <ul>
-              <li>The Black Art of 3D Graphics Programming <a href="https://archive.org/details/BlackArt3DEBook">archive.org</a></li>
-              <li>Real-Time Rendering <a href="https://www.realtimerendering.com">realtimerendering.com</a></li>
-              <li>Anton's OpenGL 4 Tutorials <a href="https://antongerdelan.net/opengl/">antongerdelan.net</a></li>
-            </ul>
-
         </div>
       </div>
 
