Removed hooks for diamond game in game design

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -118,10 +118,12 @@
 	    <p><b>-></b>treasure i midten</p>
 
             <img src="images/hunger.png">
-
+<!--
 	    <p><b>Hooks</b></p>
             <ul>
 	    </ul>
+
+	   --!>
 
 	    <p><b>Regler</b></p>
             <ul>
@@ -140,6 +142,7 @@
               <li>Bestem terninger for spillet</li>
               <li>Design kort for utfordringer</li>
               <li>Hvordan fungerer slossingen?</li>
+              <li>Hvilke hooks har spillet?</li>
             </ul>
           <p></p>
 
