Fixed grammar game design curiosity shop

--- a/projects/gamedesign/index.html
+++ b/projects/gamedesign/index.html
@@ -156,7 +156,7 @@
             <ul>
               <li>Kulturell setting, satt til viktorianske england rundt år 1825.</li>
               <li>Spill som Quilp eller Nell, rene djevelen eller en uskyldig jente, eventuelt som en av deres hjelpere</li>
-              <li>Nell rømmer med eiendeler hun har fra The Old Curiosity Shop (som Quilp mener han har eierskap over), og ønsker å komme seg en ny landsby uten å dø på veien</li>
+              <li>Nell rømmer med eiendeler hun har fra The Old Curiosity Shop (som Quilp mener han har eierskap over), Nell ønsker å komme seg til en ny landsby uten å dø på veien</li>
               <li>Quilp ønsker å få tilbake det som han mener han har fått frastjålet, samt gjøre Nell til hans kone</li>
 	    </ul>
 
